--- a/static/common/css/style.css
+++ b/static/common/css/style.css
@@ -1,5 +1,7 @@
 body { background-color: #ebebeb; }
 
+a:hover { text-decoration: none; }
+
 @keyframes square { 0% { opacity: 0.5; transform: translateY(0px) rotate(45deg); }
   25% { opacity: 0.75; transform: translateY(-400px) rotate(90deg); }
   50% { opacity: 1; transform: translateY(-600px) rotate(135deg); }
@@ -28,5 +30,17 @@ body { background-color: #ebebeb; }
 .main-navigation .menu li.nav-current { border-bottom: 2px solid #e67e22; margin-bottom: -2px; }
 .main-navigation .menu li:hover a { color: #e67e22; text-decoration: none; }
 .main-navigation .menu li a { color: #505050; line-height: 4em; display: block; padding: 0 21px; }
+
+.post { padding: 35px; background: #ffffff; margin-bottom: 35px; position: relative; overflow: hidden; }
+.post .post-head { text-align: center; }
+.post .post-head .post-title { margin: 0; font-size: 2.5em; line-height: 1em; }
+.post .post-head .post-title a { color: #000000; }
+.post .post-head .post-meta { color: #959595; margin: 14px 0 0px; }
+.post .post-content { margin: 30px 0; }
+.post .post-content p { margin-top: 0; margin-bottom: 1.46em; font-size: 16px; }
+
+.widget { background: #ffffff; padding: 21px 30px; }
+.widget .title { margin-top: 0; padding-bottom: 7px; border-bottom: 1px solid #ebebeb; margin-bottom: 21px; position: relative; }
+.widget .title:after { content: ""; width: 90px; height: 1px; background: #e67e22; position: absolute; left: 0; bottom: -1px; }
 
 /*# sourceMappingURL=style.css.map */
