--- a/static/common/css/style.css
+++ b/static/common/css/style.css
@@ -7,7 +7,7 @@ a:hover { text-decoration: none; }
   50% { opacity: 1; transform: translateY(-600px) rotate(135deg); }
   100% { opacity: 0; transform: translateY(-1000px) rotate(180deg); } }
 .login { background: #50a3a2; background: linear-gradient(to bottom right, #50a3a2 0, #53e3a6); position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow: hidden; }
-.login .panel { position: absolute; width: 340px; left: 50%; top: 50%; transform: translate(-50%, -50%); z-index: 9; }
+.login .panel { position: absolute; width: 400px; left: 50%; top: 50%; transform: translate(-50%, -50%); z-index: 9; }
 .login .bg-bubbles { position: absolute; top: 0; left: 0; width: 100%; height: 100%; z-index: 1; }
 .login .bg-bubbles li { position: absolute; list-style: none; display: block; width: 40px; height: 40px; background-color: rgba(255, 255, 255, 0.15); bottom: -160px; animation: square 25s infinite; transition-timing-function: linear; }
 .login .bg-bubbles li:nth-child(1) { left: 10%; }
@@ -39,8 +39,11 @@ a:hover { text-decoration: none; }
 .post .post-content { margin: 30px 0; }
 .post .post-content p { margin-top: 0; margin-bottom: 1.46em; font-size: 16px; }
 
-.widget { background: #ffffff; padding: 21px 30px; }
+.widget { background: #ffffff; padding: 21px 30px; margin-bottom: 35px; }
 .widget .title { margin-top: 0; padding-bottom: 7px; border-bottom: 1px solid #ebebeb; margin-bottom: 21px; position: relative; }
 .widget .title:after { content: ""; width: 90px; height: 1px; background: #e67e22; position: absolute; left: 0; bottom: -1px; }
+.widget .author { margin-bottom: 20px; height: 60px; }
+.widget .author img { float: left; widows: 60px; height: 60px; margin-right: 15px; }
+.widget .author .name { padding: 15px 0; }
 
 /*# sourceMappingURL=style.css.map */
