--- a/static/common/css/style.scss
+++ b/static/common/css/style.scss
@@ -36,7 +36,7 @@ a:hover {
     overflow: hidden;
     .panel {
         position: absolute;
-        width: 340px;
+        width: 400px;
         left: 50%;
         top: 50%;
         transform: translate(-50%, -50%);
@@ -201,6 +201,7 @@ a:hover {
 .widget {
     background: #ffffff;
     padding: 21px 30px;
+    margin-bottom: 35px;
     .title {
         margin-top: 0;
         padding-bottom: 7px;
@@ -215,6 +216,19 @@ a:hover {
             position: absolute;
             left: 0;
             bottom: -1px;
+        }
+    }
+    .author {
+        margin-bottom: 20px;
+        height: 60px;
+        img {
+            float: left;
+            widows: 60px;
+            height: 60px;
+            margin-right: 15px;
+        }
+        .name {
+            padding: 15px 0;
         }
     }
 }
